Migrate powermock tests to mockito-core